updated github startup tutorial

--- a/cookbook/appetizers/web-dev-startup.html
+++ b/cookbook/appetizers/web-dev-startup.html
@@ -174,6 +174,24 @@
                                 once you have it installed.
                                 It should resemble the screenshot on the right.
                             </p>
+                            <p class="indent">
+                                It may not look EXACTLY the same, and that's
+                                okay.  Visual Studio Code is always updating 
+                                itself.
+                            </p>
+                            <p class="indent">
+                                You'll also probably see a Welcome tab when 
+                                you first open Visual Studio Code. You can 
+                                safely close that tab, or skip the 
+                                Personalization options it has you select.
+                            </p>
+                            <p class="indent">
+                                ALSO, you'll probably see a little popup in 
+                                the lower right whenever you start up Visual 
+                                Studio Code, asking you to download and 
+                                configure Git.  You can safely close and
+                                ignore that popup.
+                            </p>
                         </div>
                         <div class="imageContainer">
                             <img 
@@ -293,6 +311,10 @@
                     <div class="sideBySide">
                         <div class="textContainer">
                             <p>
+                                Our next goal is to create a (free) GitHub 
+                                account.
+                            </p>
+                            <p>
                                 Go to
                                 <a 
                                     href="https://github.com/" 
@@ -301,21 +323,12 @@
                                 >
                                     https://github.com/
                                 </a>
-                                and create a GitHub account.
-                            </p>
-                            <p>
-                                <strong>
-                                    NOTE: Your username will be publicly 
-                                    viewable, and will also be
-                                    included in the URL for your website, 
-                                    so make sure to pick something
-                                    you're comfortable sharing with the world!
-                                </strong>
+                                and click the Sign up button in the top right.
                             </p>
                         </div>
                         <div class="imageContainer">
                             <img 
-                                src="images/web-dev-startup/githubhomepage.png" 
+                                src="images/web-dev-startup/githubhomepage_withCircle.png" 
                                 alt="The home page of GitHub" 
                             >
                             <figcaption>The home page of GitHub</figcaption>
@@ -326,28 +339,24 @@
                     <div class="sideBySide">
                         <div class="textContainer">
                             <p>
-                                Login to your GitHub account. From your 
-                                home screen, click the green
-                                "New" button to get started creating 
-                                a new repository.
+                                On the next page, enter the email address you 
+                                want to associate with your GitHub account.
+                            </p>
+                            <p class="indent">
+                                You can change your associated email later if 
+                                you want.
                             </p>
                             <p>
-                                NOTE: You may be brought to a 
-                                different page after first creating 
-                                your account.  Regardless, just look 
-                                for a green button that says "New" 
-                                with a little book with a bookmark icon. 
-                                That's the button that 
-                                will allow you to create a new repository.
+                                Then click the Continue button.
                             </p>
                         </div>
                         <div class="imageContainer">
                             <img 
-                                src="images/web-dev-startup/githubaccounthome.png" 
-                                alt="Your account home page on github.com" 
+                                src="images/web-dev-startup/02_email.png"
+                                alt="Entering email during GitHub account setup" 
                             >
                             <figcaption>
-                                Your account home page on github.com
+                                Entering email during GitHub account setup
                             </figcaption>
                         </div>
                     </div>
@@ -356,15 +365,252 @@
                     <div class="sideBySide">
                         <div class="textContainer">
                             <p>
-                                Name your new repository: 
-                                <em>your_username</em>.github.io<br>
+                                The page will update and prompt you to submit
+                                a password for your account; go ahead and do so.
+                            </p>
+                            <p>
+                                Then click the Continue button.
+                            </p>
+                        </div>
+                        <div class="imageContainer">
+                            <img 
+                                src="images/web-dev-startup/03_password.png"
+                                alt="Entering password during GitHub account setup" 
+                            >
+                            <figcaption>
+                                Entering password during GitHub account setup
+                            </figcaption>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="sideBySide">
+                        <div class="textContainer">
+                            <p>
+                                The page will update again and prompt you to 
+                                submit a username for your account; go ahead 
+                                and do so.
+                            </p>
+                            <p>
+                                <strong>
+                                    NOTE: Your username will be publicly 
+                                    viewable, and will also be
+                                    included in the URL for your website, 
+                                    so make sure to pick something
+                                    you're comfortable sharing with the world!
+                                </strong>
+                            </p>
+                            <p>
+                                Then click the Continue button.
+                            </p>
+                        </div>
+                        <div class="imageContainer">
+                            <img 
+                                src="images/web-dev-startup/04_username.png"
+                                alt="Entering username during GitHub account setup" 
+                            >
+                            <figcaption>
+                                Entering username during GitHub account setup
+                            </figcaption>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="sideBySide">
+                        <div class="textContainer">
+                            <p>
+                                The page will update again and ask if you want 
+                                to receive product updates related to GitHub.
+                            </p>
+                            <p>
+                                We recommend typing "n" to decline, but if you 
+                                are interested in getting emails from GitHub,
+                                feel free to type "y".
+                            </p>
+                            <p>
+                                Then click the Continue button.
+                            </p>
+                        </div>
+                        <div class="imageContainer">
+                            <img 
+                                src="images/web-dev-startup/05_productupdates.png"
+                                alt="Entering your product update response during GitHub account setup" 
+                            >
+                            <figcaption>
+                                Entering your product update response 
+                                during GitHub account setup
+                            </figcaption>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="sideBySide">
+                        <div class="textContainer">
+                            <p>
+                                The page will update AGAIN and prompt you to 
+                                prove that you're a human and not a robot, by 
+                                having you complete a little puzzle.
+                            </p>
+                            <p class="indent">
+                                You have a choice of completing a visual puzzle,
+                                or an audio puzzle.
+                            </p>
+                            <p>
+                                Complete the puzzle to continue.
+                            </p>
+                        </div>
+                        <div class="imageContainer">
+                            <img 
+                                src="images/web-dev-startup/06_verify.png"
+                                alt="Proving your a human to GitHub" 
+                            >
+                            <figcaption>
+                                Proving your a human to GitHub
+                            </figcaption>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="sideBySide">
+                        <div class="textContainer">
+                            <p>
+                                After completing the puzzle, a button will 
+                                appear at the bottom, which will allow you to
+                                finally create your account.
+                            </p>
+                            <p>
+                                Click the "Create account" button to continue.
+                            </p>
+                        </div>
+                        <div class="imageContainer">
+                            <img 
+                                src="images/web-dev-startup/07_create.png"
+                                alt="Clicking the Create Account button" 
+                            >
+                            <figcaption>
+                                Clicking the Create Account button
+                            </figcaption>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="sideBySide">
+                        <div class="textContainer">
+                            <p>
+                                After clicking the Create Account button, 
+                                GitHub will send an email to the address you 
+                                specified with a "launch code". You'll need 
+                                to go into your email to retrieve it.
+                            </p>
+                            <p>
+                                Copy that code, and paste it into the page
+                                you left in GitHub.
+                            </p>
+                        </div>
+                        <div class="imageContainer">
+                            <img 
+                                src="images/web-dev-startup/08_launch_email.png"
+                                alt="Clicking the Create Account button" 
+                            >
+                            <figcaption>
+                                The email from GitHub with your "launch code"
+                            </figcaption>
+                            <img 
+                                src="images/web-dev-startup/08_launch.png"
+                                alt="Clicking the Create Account button" 
+                            >
+                            <figcaption>
+                                Where to input the "launch code" on GitHub
+                            </figcaption>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="sideBySide">
+                        <div class="textContainer">
+                            <p>
+                                Then you'll be brought to a page to 
+                                personalize your GitHub account.
+                            </p>
+                            <p>
+                                This can be skipped entirely by clicking 
+                                the Skip Personalization link at the bottom
+                                (which we encourage you to do).
+                            </p>
+                            <p>
+                                Then you'll get a fun "launch" animation, 
+                                before being brought to your Dashboard.
+                            </p>
+                        </div>
+                        <div class="imageContainer">
+                            <img 
+                                src="images/web-dev-startup/09_personalization.png" 
+                                alt="The Personalization page, which can be skipped" 
+                            >
+                            <figcaption>
+                                The Personalization page, which can be skipped
+                            </figcaption>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="sideBySide">
+                        <div class="textContainer">
+                            <p>
+                                Now, you finally finished creating your GitHub 
+                                account!  You should be on the Dashboard of your 
+                                account.
+                            </p>
+                            <p class="indent">
+                                Most likely your GitHub theme is set to "Light" 
+                                mode, but depending on your computer settings,
+                                it may default to "Dark" mode.
+                            </p>
+                            <p>
+                                Next, we're going to be creating our code 
+                                repository, which is basically a special folder 
+                                that we'll use to store our code (both 
+                                "remotely" on GitHub.com, and also "locally"
+                                on your computer).
+                            </p>
+                            <p>
+                                Click the green "Create repository" to get
+                                started.
+                            </p>
+                        </div>
+                        <div class="imageContainer">
+                            <img 
+                                src="images/web-dev-startup/10_dashboard.png" 
+                                alt="'Create repository' on the Dashboard ('Light' Theme)" 
+                            >
+                            <figcaption>
+                                'Create repository' on the Dashboard ('Light' Theme)
+                            </figcaption>
+                            <img 
+                                src="images/web-dev-startup/10_dashboard_dark.png" 
+                                alt="'Create repository' on the Dashboard ('Dark' Theme)" 
+                            >
+                            <figcaption>
+                                'Create repository' on the Dashboard ('Dark' Theme)
+                            </figcaption>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="sideBySide">
+                        <div class="textContainer">
+                            <p>
+                                Name your new repository:
+                                <br><br>
+                                <em>your_username</em>.github.io
+                                <br><br>
                                 (replacing <em>your_username</em> 
                                 with your actual username,
                                 of course) 
                             </p>
                             <p>
                                 <strong>
-                                    NOTE: This is very important to get right!
+                                    WARNING: This is VERY important to get right!
                                     <br><br>
                                     If you don't type your username in 
                                     exactly the same,
