--- a/cookbook/appetizers/web-dev-startup.html
+++ b/cookbook/appetizers/web-dev-startup.html
@@ -604,9 +604,9 @@
                                 <br><br>
                                 <em>your_username</em>.github.io
                                 <br><br>
-                                (replacing <em>your_username</em> 
-                                with your actual username,
-                                of course) 
+                                replacing <em>your_username</em> 
+                                with the same username you specified when 
+                                you created your account.
                             </p>
                             <p>
                                 <strong>
