--- a/cookbook/ingredients/audio.html
+++ b/cookbook/ingredients/audio.html
@@ -23,6 +23,8 @@
             Your browser does not support the &lt;audio&gt; element.
         </audio>
 
+        <!-- 
+
         <h2>
             Here is an audio example that enables autoplay 
         </h2>
@@ -30,10 +32,12 @@
             (Don't do this! It is very bad practice to play sounds without the user's
             action or consent.)
         </h3>
-        <p>[NOTE: no longer works in Google Chrome 67+]</p>
+        <p>[NOTE: doesn't work in all version of Chrome</p>
         <audio controls autoplay src="audio/TranquilDepths.mp3">
             Your browser does not support the &lt;audio&gt; element.
-        </audio>
+        </audio> 
+        
+        -->
 
         <h2>
             If you don't set the <code>controls</code> attribute, the &lt;audio&gt;
