--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -1,185 +1,194 @@
 <!DOCTYPE html>
 <html lang="en-US">
-  <head>
-    <title>AGENDA &amp; SYLLABUS</title>
-    <meta name="description" content="This is an amazing site; come visit!">
-    <style>
-      body {
-        font-family: Verdana, sans-serif;
-      }
-      ul {
-        font-size: 24px;
-      }
-      #agenda {
-        padding-left: 36px;
-        margin-bottom: 36px;
-      }
-      .indent {
-        padding-left: 36px;
-      }
-      .highlight {
-        background-color: orange;
-      }
-      .warning {
-        background-color: red;
-      }
-      .green {
-        background: linear-gradient(to right, green, lightgreen, green);
-        padding: 12px;
-        text-shadow: 1px 1px 4px white;
-      }
-      h2 {
-        margin-top: 24px
-      }
-      .agendaItem {
-        font-size: 18px;
-        display: flex;
-      }
-      .agendaItem span:first-child {
+    <head>
+        <title>GDWD 105 Agenda (Night)</title>
+        <meta name="description" content="GDWD 105 Agenda (Night)">
+        <style>
+            body {
+                font-family: Verdana, sans-serif;
+            }
+            ul {
+                font-size: 24px;
+            }
+            #agenda {
+                padding-left: 36px;
+                margin-bottom: 36px;
+            }
+            .indent {
+                padding-left: 36px;
+            }
+            .highlight {
+                background-color: orange;
+            }
+            .warning {
+                background-color: red;
+            }
+            .green {
+                background: linear-gradient(to right, green, lightgreen, green);
+                padding: 12px;
+                text-shadow: 1px 1px 4px white;
+            }
+            h2 {
+                margin-top: 24px
+            }
+            .agendaItem {
+                font-size: 18px;
+                display: flex;
+            }
+            .agendaItem span:first-child {
 
-        width: 250px;
-      }
-      .agendaItem span:not(:first-child) {
-        flex: 1;
-      }
-      .assnItem {
-        display: flex;
-        max-width: 800px;
-      }
-      .assnItem span:first-child {
-        flex: 1;
-      }
-      .assnItem span:not(:first-child) {
-        width: 200px;
-      }
-      .done {
-        text-decoration: line-through;
-      }
-    </style>
-  </head>
-  <body>
-    <h1>GDWD 105 Agenda for July 26<sup>th</sup></h1>
-    <div id="agenda">
-      <!-- <h2>Office Hours (4:30-5:30): Available Upon Request (no guarantees on same-day requests!)</h2> -->
-      <h2>Announcements (6:10)</h2>
-      <h3>(if you're not here by 6:10, you're tardy!)</h3>
-      <h2>Period 1 (6:00-7:10): Lab Time - Completed Gallery/Portfolio</h2>
-      <h3>SHORT BREAK (10 MIN)</h3>
-      <h2>Period 2 (7:20-8:30): Lab Time - Completed Gallery/Portfolio</h2>
-      <h3>DINNER BREAK (45 MIN)</h3>
-      <h2>Period 3 (9:15-11:00): Lab Time - Completed Gallery/Portfolio</h2>
-    </div>
+                width: 250px;
+            }
+            .agendaItem span:not(:first-child) {
+                flex: 1;
+            }
+            .assnItem {
+                display: flex;
+                max-width: 800px;
+            }
+            .assnItem span:first-child {
+                flex: 1;
+            }
+            .assnItem span:not(:first-child) {
+                width: 200px;
+            }
+            .done {
+                text-decoration: line-through;
+            }
+            .indent {
+                padding-left: 48px;
+            }
+        </style>
+    </head>
+    <body>
+        <h1>GDWD 105 Agenda for October 19<sup>th</sup></h1>
+        <div id="agenda">
+        <!-- <h2>Office Hours (4:30-5:30): Available Upon Request (no guarantees on same-day requests!)</h2> -->
+        <h2>Announcements (6:10)</h2>
+        <h3>(if you're not here by 6:10, you're tardy!)</h3>
+        <h2>
+            Period 1 (6:00-7:10): 
+            <br><span class="indent">Kahoot - HTML Children</span>
+            <br><span class="indent">Intro to Week 1 Project - HTML Potluck</span>
+        </h2>
+        <h3>SHORT BREAK (10 MIN)</h3>
+        <h2>Period 2 (7:20-8:30): Lab Time - HTML Potluck</h2>
+        <h3>DINNER BREAK (45 MIN)</h3>
+        <h2>
+            Period 3 (9:15-11:00): 
+            <br><span class="indent">Quiz 1 - HTML Fundamentals
+            <br><span class="indent">PowerPoint - Intro to CSS
+            <br><span class="indent">Demo - CSS Colors and Text Styling
+            <br><span class="indent">Exercise - Color Palettes (???)
+        </h2>
+        </div>
 
-    <h1>Assignments, Deliverables &amp; More</h1>
-    <div id="agenda">
-      <h2 class="assnItem highlight">
-        <span>Portfolio - Finalized Gallery | Exercise</span>
-        <span>Due TONIGHT at 11pm</span>
-      </h2>
-      <h2 class="assnItem highlight">
-        <span>Portfolio Final Submission | Final Project</span>
-        <span>Due TONIGHT at 11pm</span>
-      </h2>
-      <h2 class="assnItem warning">
-        <span>Portfolio - Finalized About Me | Exercise</span>
-        <span>Due YESTERDAY at 11pm</span>
-      </h2>
-      <h2 class="assnItem warning">
-        <span>Portfolio - Finalized Contact Page | Exercise</span>
-        <span>Due YESTERDAY at 11pm</span>
-      </h2>
-    </div>
+        <h1>Assignments, Deliverables &amp; More</h1>
+        <div id="agenda">
+        <h2 class="assnItem highlight">
+            <span>HTML Potluck | Project</span>
+            <span>Due TONIGHT at after the dinner break</span>
+        </h2>
+        <h2 class="assnItem highlight">
+            <span>Quiz 1 - HTML Fundamentals</span>
+            <span>After the dinner break</span>
+        </h2>
+        <h2 class="assnItem">
+            <span>Color Palette | Exercise</span>
+            <span>MAYBE due tonight at 11pm???</span>
+        </h2>
+        </div>
 
-    <h1>Late Policy</h1>
-    <div id="agenda">
-      <h2>
-        Late Exercises: 10% penalty
+        <h1>Late Policy</h1>
+        <div id="agenda">
+        <h2>
+            Late Exercises: 10% penalty
+            <br>
+            Late Projects: 21% penalty
+        </h2>
+        <h2>
+            Last Day to Resubmit assignments:
+            <br>Five (5) class days after the assignment was assigned
+        </h2>
+        <h3>(Anything turned in past this won't be graded)</h3>
+        </div>
+
+        <!-- <h1>End of Class Syllabus</h1>
+        <div id="agenda">
+        <div class="agendaItem done">
+            <span>3/07 (Tues - W9 Day 41)</span>
+            <span>Frame-by-Frame JS Animation</span>
+        </div>
+        <div class="agendaItem done">
+            <span>3/08 (Wed - W9 Day 42)</span>
+            <span>JS Animation - GreenSock</span>
+        </div>
+        <div class="agendaItem done">
+            <span>3/09 (Thurs - W9 Day 43)</span>
+            <span>Finals Review</span>
+        </div>
+        <div class="agendaItem ">
+            <span>3/10 (Fri - W9 Day 44)</span>
+            <span>FINAL EVAL</span>
+        </div>
         <br>
-        Late Projects: 21% penalty
-      </h2>
-      <h2>
-        Last Day to Resubmit assignments:
-        <br>Five (5) class days after the assignment was graded
-      </h2>
-      <h3>(Anything turned in past this won't be graded)</h3>
-    </div>
+        <div class="agendaItem ">
+            <span>3/13 (Mon - W9 Day 45)</span>
+            <span>FINAL EXAM</span>
+        </div>
+        <br><br> -->
+        <!-- <div class="agendaItem done">
+            <span>12/12 (Day 06)</span>
+            <span>Illustrator/Motion Graphics - Planning Assignments and Critiques Part 1</span>
+        </div>
+        <div class="agendaItem done">
+            <span>12/13 (Day 07)</span>
+            <span>Illustrator/Motion Graphics - Critiques Part 2</span>
+        </div>
+        <div class="agendaItem done">
+            <span>12/14 (Day 08)</span>
+            <span>Illustrator/Motion Graphics - Lab Day</span>
+        </div>
+        <div class="agendaItem done">
+            <span>12/15 (Day 09)</span>
+            <span>Illustrator/Motion Graphics - Lab Day</span>
+        </div>
+        <div class="agendaItem done">
+            <span>12/16 (Day 10)</span>
+            <span>Illustrator/Motion Graphics - Presentations and Project Turn-in Assignments</span>
+        </div>
+        <br><br>
+        <div class="agendaItem done">
+            <span>12/19 - 01/02</span>
+            <span>Winter Break!</span>
+        </div>
+        <div class="agendaItem done">
+            <span>12/19 - 12/21</span>
+            <span>Lab Days: 9am - 5:30pm</span>
+        </div>
+        <br><br>
+        <div class="agendaItem done">
+            <span>01/03 (Day 11)</span>
+            <span>Web Development/UI/UX/Resume - Planning Assignments and Critiques Part 1</span>
+        </div>
+        <div class="agendaItem done">
+            <span>01/04 (Day 12)</span>
+            <span>Web Development/UI/UX/Resume - Critiques Part 2 | Final Exam Review #1</span>
+        </div>
+        <div class="agendaItem">
+            <span>01/05 (Day 13)</span>
+            <span>Web Development/UI/UX/Resume - Lab Day | Final Exam Review #2 | Exit Surveys</span>
+        </div>
+        <div class="agendaItem">
+            <span>01/06 (Day 14)</span>
+            <span>[NEW INSTRUCTOR!!!] Web Development/UI/UX/Resume - Presentations and Project Turn-in Assignments | Final Exam Review #3</span>
+        </div>
+        <br><br>
+        <div class="agendaItem">
+            <span>01/09 (Day 15)</span>
+            <span>[NEW INSTRUCTOR!!!] Exit Exam | Final Portfolio Site - Presentations</span>
+        </div>
+        </div> -->
 
-    <!-- <h1>End of Class Syllabus</h1>
-    <div id="agenda">
-      <div class="agendaItem done">
-        <span>3/07 (Tues - W9 Day 41)</span>
-        <span>Frame-by-Frame JS Animation</span>
-      </div>
-      <div class="agendaItem done">
-        <span>3/08 (Wed - W9 Day 42)</span>
-        <span>JS Animation - GreenSock</span>
-      </div>
-      <div class="agendaItem done">
-        <span>3/09 (Thurs - W9 Day 43)</span>
-        <span>Finals Review</span>
-      </div>
-      <div class="agendaItem ">
-        <span>3/10 (Fri - W9 Day 44)</span>
-        <span>FINAL EVAL</span>
-      </div>
-      <br>
-      <div class="agendaItem ">
-        <span>3/13 (Mon - W9 Day 45)</span>
-        <span>FINAL EXAM</span>
-      </div>
-      <br><br> -->
-      <!-- <div class="agendaItem done">
-        <span>12/12 (Day 06)</span>
-        <span>Illustrator/Motion Graphics - Planning Assignments and Critiques Part 1</span>
-      </div>
-      <div class="agendaItem done">
-        <span>12/13 (Day 07)</span>
-        <span>Illustrator/Motion Graphics - Critiques Part 2</span>
-      </div>
-      <div class="agendaItem done">
-        <span>12/14 (Day 08)</span>
-        <span>Illustrator/Motion Graphics - Lab Day</span>
-      </div>
-      <div class="agendaItem done">
-        <span>12/15 (Day 09)</span>
-        <span>Illustrator/Motion Graphics - Lab Day</span>
-      </div>
-      <div class="agendaItem done">
-        <span>12/16 (Day 10)</span>
-        <span>Illustrator/Motion Graphics - Presentations and Project Turn-in Assignments</span>
-      </div>
-      <br><br>
-      <div class="agendaItem done">
-        <span>12/19 - 01/02</span>
-        <span>Winter Break!</span>
-      </div>
-      <div class="agendaItem done">
-        <span>12/19 - 12/21</span>
-        <span>Lab Days: 9am - 5:30pm</span>
-      </div>
-      <br><br>
-      <div class="agendaItem done">
-        <span>01/03 (Day 11)</span>
-        <span>Web Development/UI/UX/Resume - Planning Assignments and Critiques Part 1</span>
-      </div>
-      <div class="agendaItem done">
-        <span>01/04 (Day 12)</span>
-        <span>Web Development/UI/UX/Resume - Critiques Part 2 | Final Exam Review #1</span>
-      </div>
-      <div class="agendaItem">
-        <span>01/05 (Day 13)</span>
-        <span>Web Development/UI/UX/Resume - Lab Day | Final Exam Review #2 | Exit Surveys</span>
-      </div>
-      <div class="agendaItem">
-        <span>01/06 (Day 14)</span>
-        <span>[NEW INSTRUCTOR!!!] Web Development/UI/UX/Resume - Presentations and Project Turn-in Assignments | Final Exam Review #3</span>
-      </div>
-      <br><br>
-      <div class="agendaItem">
-        <span>01/09 (Day 15)</span>
-        <span>[NEW INSTRUCTOR!!!] Exit Exam | Final Portfolio Site - Presentations</span>
-      </div>
-    </div> -->
-
-  </body>
+    </body>
 </html>
