--- a/cookbook/troubleshooting.html
+++ b/cookbook/troubleshooting.html
@@ -61,6 +61,7 @@
                             </a>
                         </h2>
                         <div class="dropdown-items">
+                            <h2><a href="demos.html">Class Demos</a></h2>
                             <h2><a href="appetizers.html">Tutorials</a></h2>
                             <h2><a href="troubleshooting.html">Troubleshooting</a></h2>
                         </div>
