--- a/cookbook/meal-prep/heroes/page0.html
+++ b/cookbook/meal-prep/heroes/page0.html
@@ -7,6 +7,10 @@
         <link href="css/page0.css" rel="stylesheet">
     </head>
     <body>
+        <!-- 
+            To start with, we'll just add a div 
+            with an id of "hero-1" 
+        -->
         <div id="hero-1">
 
         </div>
