--- a/cookbook/meal-prep/heroes/page3.html
+++ b/cookbook/meal-prep/heroes/page3.html
@@ -8,6 +8,7 @@
     </head>
     <body>
         <div id="hero-1">
+            <!-- We're just adding an H1 element -->
             <h1>Sup?</h1>
         </div>
     </body>
