--- a/cookbook/meal-prep/heroes/page4.html
+++ b/cookbook/meal-prep/heroes/page4.html
@@ -10,15 +10,17 @@
         <div id="hero-1">
             <h1>Sup?</h1>
         </div>
+
         <!--
             Add an empty div with a class of "spacer".
             We're just going to use this to separate
             our heroes.
         -->
         <div class="spacer"></div>
+
         <!--
             Now add a second hero, and this time we'll
-            add a few pieces of content.
+            add a few pieces of content inside.
         -->
         <div id="hero-2">
             <h2>Feeling lost?</h2>
