--- a/cookbook/meal-prep/heroes/page6.html
+++ b/cookbook/meal-prep/heroes/page6.html
@@ -23,10 +23,12 @@
             Add another spacer
         -->
         <div class="spacer"></div>
+
         <!--
             Add a new hero with a more complex layout.
 
-            (start with the h2, h4, and div w/ anchors)
+            (normally, we might just start with 
+            the h2, h4, and div w/ anchors but...)
 
             Flexbox is nice when we want everything
             going in the same direction, but if we 
@@ -35,8 +37,9 @@
             thing together and move/style everything
             as a group ("hero-content")
 
-            (now wrap the h2, h4, etc. in the
-            hero-content div container)
+            (...so instead, we'll wrap the h2, h4, etc. 
+            in the hero-content div container. This will
+            help us later on.)
         -->
         <div id="hero-3">
             <div class="hero-content">
